renamed some ITupleModel members
NEW - # 644: Zurückschreiben von Prognose-Daten 
https://dev.bjoernsen.de/prognose/ticket/644